# mirnov-rmt-stage1

./: .gitignore  README.md  pyproject.toml  report.html
scripts/: exp1_noise_mp_bulk.py  exp2_single_mode_outlier.py  exp3_snr_sweep.py  exp4_dk_sweep.py  exp5_two_mode.py  run_all.py  sync_to_windows.py
src/mirnov_rmt/: __init__.py  baselines.py  geometry.py  mode_fit.py  pipeline.py  plotting.py  rmt.py  snapshots.py  spectral.py  surrogate.py  synthetic.py
tests/: test_core_shapes.py
