[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mirnov-rmt-stage1"
version = "0.1.0"
description = "Synthetic Mirnov array spectral coherence RMT experiments"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
